# olio-ohjelmointi

EXTRA-tehtavat/extratehtava1/: CMakeLists.txt  main.cpp
EXTRA-tehtavat/extratehtava2/: CMakeLists.txt
Viikkotehtava6/: CMakeLists.txt  main.cpp
viikkotehtava1/: main.cpp
viikkotehtava2peli/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
viikkotehtava3/: CMakeLists.txt  Chef.cpp  Chef.h  ItalianChef.cpp  ItalianChef.h  main.cpp
viikkotehtava4/: Asiakas.cpp  Asiakas.h  CMakeLists.txt  Luottotili.cpp  Luottotili.h  Pankkitili.cpp  Pankkitili.h  main.cpp
viikkotehtava5/: CMakeLists.txt  main.cpp
